<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:background="#fff"
                                                   android:layout_height="184dp">

    <Button
            android:textColor="#ffffffff"
            android:textSize="15sp"
            android:background="@drawable/drawable_deep_gray_4dp_rect"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:id="@+id/btnCancel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="20dp"/>

    <Button
            android:text="@string/video_call"
            android:textColor="#ffffffff"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:id="@+id/btnVideoCall"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
            android:layout_marginBottom="20dp"
            android:background="@drawable/drawable_blue_4dp_rect"/>

    <Button
            android:text="@string/audio_call"
            android:textColor="#ffffffff"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:id="@+id/btnAudioCall"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@+id/btnVideoCall"
            android:layout_marginBottom="20dp"
            android:background="@drawable/drawable_blue_4dp_rect"/>
</androidx.constraintlayout.widget.ConstraintLayout>