<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctlTitleBar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_height="44dp">

        <TextView
                android:text="@string/select_contact_and_call"
                android:textColor="#ff333333"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvProductName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:textColor="#ff333333"
                android:textSize="16sp"
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvBack"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        <TextView
                android:textColor="#ff333333"
                android:textSize="16sp"
                android:text="@string/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvClose"
                app:layout_constraintStart_toEndOf="@+id/tvBack"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="#fff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctlTitleBar"
            android:id="@+id/constraintLayout3">

        <LinearLayout
                android:background="@drawable/drawable_gray_4dp_rect"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/icon_search"/>

            <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:inputType=""
                    android:singleLine="true"
                    android:textColor="#2b2b2b"
                    android:textSize="14sp"/>

            <ImageView
                    android:id="@+id/ivClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@mipmap/ic_launcher"
                    android:visibility="gone"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctlOrganizationDetailLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:background="#fff"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTitleFlipper"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                />

        <TextView
                android:visibility="gone"
                android:text="迈克行通信"
                android:textColor="#ff999999"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvOrgFlood"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="38dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/rcvOrgDetails"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#fff"
            android:id="@+id/constraintLayout2">

        <Button
                android:tag="no"
                android:gravity="center"
                android:text="@string/confirm"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:id="@+id/btnConfirm"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/drawable_deep_gray_4dp_rect"
                android:textColor="#fff"
                android:textSize="15sp"/>

        <TextView
                android:text="@string/cur_select_persons"
                android:textColor="#ff333333"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCurSelectGroup"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>