<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:background="@drawable/drawable_white_8dp_rect"
                                                   android:layout_width="288dp"
                                                   android:layout_height="391dp">

    <ImageView
            android:visibility="gone"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/icon_close_blue"
            android:id="@+id/ivClose"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:textColor="#ff333333"
            android:textSize="16sp"
            android:text="@string/add_new_connect_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSearchDeviceTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"/>


    <TextView
            android:padding="2dp"
            android:visibility="gone"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff333333"
            android:textSize="14sp"
            android:id="@+id/tvBack"
            android:layout_marginStart="9dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctlSearching"
            android:layout_marginTop="56dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.yuyashuai.frameanimation.FrameAnimationView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/favSearchDeviceLoading"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/tvSearchingTip"/>

        <ImageView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivSearchDeviceLoading"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/tvSearchingTip"/>

        <TextView
                android:textColor="#ff999999"
                android:textSize="12sp"
                android:text="@string/searching_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSearchingTip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="80dp"/>

        <Button
                android:background="@drawable/drawable_blue_4dp_rect"
                android:text="@string/cancel"
                android:tag="cancel"
                android:textColor="#ffffffff"
                android:textSize="15sp"
                android:layout_width="192dp"
                android:layout_height="32dp"
                android:id="@+id/btnCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="37dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctlDeviceList"
            android:layout_marginTop="56dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvDeviceList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="gone"
            android:id="@+id/ctlDeviceDetail"
            android:layout_marginTop="56dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/icon_far_phone_large"
                android:id="@+id/ivDeviceDetailIcon"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="21dp"/>

        <TextView
                android:textColor="#ff000000"
                android:textSize="14sp"
                android:text=""
                app:layout_constraintWidth_percent="0.4"
                android:singleLine="true"
                android:layout_width="0dp"
                android:ellipsize="middle"
                android:layout_height="wrap_content"
                android:id="@+id/tvDeviceDetailName"
                app:layout_constraintBottom_toBottomOf="@+id/ivDeviceDetailIcon"
                app:layout_constraintTop_toTopOf="@+id/ivDeviceDetailIcon"
                app:layout_constraintStart_toEndOf="@+id/ivDeviceDetailIcon"
                android:layout_marginStart="21dp"/>

        <TextView
                android:text="@string/please_check_the_pwd_of_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textColor="#ff999999"
                android:textSize="12sp"
                android:layout_marginTop="120dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:visibility="gone"
                android:text="@string/check_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCompareFailed"
                android:layout_marginBottom="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textColor="#ffba3535"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>

        <com.sunday.common.widgets.IPEditText
                android:id="@+id/ipEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="125dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>