<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="316dp"
        android:background="@drawable/drawable_white_8dp_rect"
        android:layout_height="wrap_content">


    <TextView
            android:text="@string/new_version_update"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUpdateTitle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <TextView
            android:layout_marginTop="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUpdateTitle"
            android:text=""
            android:textColor="#ff999999"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="20dp"
            tools:layout_editor_absoluteX="31dp"
            android:id="@+id/tvVersionCode"/>

    <androidx.core.widget.NestedScrollView
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvVersionCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:layout_width="0dp"
            android:id="@+id/nsvUpdateInfo"
            android:maxHeight="150dp"
            android:layout_height="wrap_content">

        <TextView
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="#ff333333"
                android:textSize="14sp"
                android:id="@+id/tvUpdateInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </androidx.core.widget.NestedScrollView>


    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/nsvUpdateInfo"
            android:id="@+id/llUpdateNow"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="44dp">

        <View
                android:background="#F3F3F3"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        <TextView
                android:textColor="#ff4a88d1"
                android:textSize="16sp"
                android:text="@string/update_now"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="43dp"/>

    </LinearLayout>


    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/llUpdateNow"
            android:id="@+id/llCancelUpdate"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="44dp">

        <View
                android:background="#F3F3F3"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        <TextView
                android:textColor="#ff999999"
                android:textSize="16sp"
                android:text="@string/cancel"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="43dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>